[package]
name = "cryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Using 1.84.1-... rust toolchain to compile this. New one(s) ask for wasm-bindgen version bump.
wasm-bindgen = "0.2.78"
nacl = "0.5.3"
wasm-message-passing-3nweb = "0.2.0"
prost = "0.9.0"

[build-dependencies]
prost-build = "0.9.0"
